fixed the button in first kyc page so that it's not covered by live chat icon

--- a/src/app/feature/pages/ddx-settings-page/ddx-settings-page.component.scss
+++ b/src/app/feature/pages/ddx-settings-page/ddx-settings-page.component.scss
@@ -71,7 +71,7 @@
         'kyc-content__container'
         'kyc-buttons__container';
 
-      min-height: calc(100vh - 240px);
+      min-height: calc(100vh - 310px);
       width: 100%;
 
       .kyc-content__container {
